Bug 391030 - KMail does not print images in emails
Summary: KMail does not print images in emails
Status: RESOLVED FIXED
Alias: None
Product: kmail2
Classification: Applications
Component: general (other bugs)
Version First Reported In: 5.7.2
Platform: Neon Linux
: NOR normal
Target Milestone: ---
Assignee: kdepim bugs
URL:
Keywords:
: 400947 (view as bug list)
Depends on:
Blocks:
 
Reported: 2018-02-25 03:13 UTC by David R. Bergstein
Modified: 2020-10-27 08:55 UTC (History)
5 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 5.15.3
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description David R. Bergstein 2018-02-25 03:13:00 UTC
There is a setting that allows background colors and images to be printed but this seems to have no effect on the printed output.  Wherever a graphic image is in an email, it gets replaced with blank space in the printout (same in print preview).
Comment 1 Justin 2020-01-26 03:13:10 UTC
This affects me also!

I need to print a email ticket with a QR code!
Is there a fix?

KMail
Version 5.11.3
Kubuntu 19.10
Comment 2 Attila 2020-08-06 08:38:48 UTC
I can confirm. Same on Fedora 32, KMail version 5.13.2 (19.12.2).
Comment 3 Laurent Montel 2020-08-07 10:56:01 UTC
I confirm it. I will investigate it
Comment 4 Jonathan Marten 2020-09-26 08:41:15 UTC
*** Bug 400947 has been marked as a duplicate of this bug. ***
Comment 5 Jonathan Marten 2020-09-26 08:42:24 UTC
Test message attached to bug 400947.
Comment 6 Laurent Montel 2020-10-26 13:03:20 UTC
Git commit 9a8bbe19ea11efd5bbd721fc6e986682b9d3b2a9 by Laurent Montel.
Committed on 26/10/2020 at 13:02.
Pushed by mlaurent into branch 'release/20.08'.

Fix Bug 391030 (anarchotaoist) - KMail does not print images in emails

FIXED-IN: 5.15.3

M  +13   -5    messageviewer/src/viewer/viewer_p.cpp
M  +1    -1    messageviewer/src/viewer/viewer_p.h

https://invent.kde.org/pim/messagelib/commit/9a8bbe19ea11efd5bbd721fc6e986682b9d3b2a9