Fix Bug 391030 (anarchotaoist) - KMail does not print images in emails

FIXED-IN: 5.15.3
BUG: 391030